--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "a map from arrays of values to values",
   "main": "main.js",
   "scripts": {
-    "test": "node test.js",
+    "test": "npm run test-code && npm run test-docs",
+    "test-docs": "txm readme.md",
+    "test-code": "node test.js",
     "posttest": "standard",
-    "test-with-coverage": "nyc npm test",
+    "test-with-coverage": "nyc node test.js",
     "upload-coverage-report": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
@@ -31,6 +33,7 @@
     "coveralls": "^3.1.0",
     "nyc": "^15.1.0",
     "standard": "^16.0.3",
-    "tape": "^5.2.2"
+    "tape": "^5.2.2",
+    "txm": "^7.4.5"
   }
 }
