--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.1.2",
   "description": "a map from arrays of values to values",
   "main": "main.js",
+  "types": "main.d.ts",
   "scripts": {
     "test": "npm run test-code && npm run test-docs",
     "test-docs": "txm readme.md",
