Replace `npm bin` with hardcoded path
Looks like `npm bin` is no more; we're supposed to just hardcode the
path now. That *should* make running c8 coverage report work properly
again, fingers crossed?

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm run-script test-with-coverage
 
       - name: generate LCOV coverage report
-        run: $(npm bin)/c8 report --reporter=text-lcov > ./coverage/lcov.info
+        run: ./node_modules/.bin/c8 report --reporter=text-lcov > ./coverage/lcov.info
       - name: upload coverage report to coveralls
         uses: coverallsapp/github-action@master
         with:
